# wavelet-compression

./: .gitignore  CMakeLists.txt  README.md  compress.cpp  compress.h  huffman.cpp  huffman.h  main.cpp  matrix.cpp  matrix.h  quantization.cpp  quantization.h  wavelet.cpp  wavelet.h
EasyBMP/: CMakeLists.txt
